<resources>
    <string name="APP_ID">241627042910321</string>
    <string name="API_KEY">AIzaSyC9HBmGD4zSDVznHex2fKU4hzd4ZZkgqrs</string>
    <string name="app_name">KaChing.me</string>
    <string name="version_no">Version 1.1</string>
    <string name="nynm_title">Enter Your Text</string>
    <string name="nynm_message">Enter Your NynM</string>
    <string name="btCancel">Cancel</string>
    <string name="btAdd">Add</string>
    <string name="response_disable">Disable</string>
    <string name="auto_response_hint">Enter Auto Response Message</string>
    <string name="auto_response_title">Add Auto Response Text</string>
    <string name="auto_resp_proceed">Proceed</string>
    <string name="auto_resp_dismiss">Dismiss</string>
    <string name="bottom_cart">CarT</string>
    <string name="bottom_buxs">BuxS</string>
    <string name="bottom_chat">ChaT</string>
    <string name="archive_all_conversastion">Archieve all conversations</string>
    <string name="are_sure_archieve_coversastion">Are you sure you want to archive ALL chats?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_otp">OtpActivity</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="title_activity_enter_otp">EnterOtpActivity</string>
    <string name="resend"><u>Resend OTP ?</u></string>
    <string name="title_activity_nyms">NymsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="country_prompt">Choose a country</string>
    <string name="offerchs">Choose a Offer</string>
    <string name="a_yes">Accept</string>
    <string name="send_you">Send you</string>
    <string name="message">message</string>
    <string name="chat">ChaT</string>
    <string name="bux">BuxS</string>
    <string name="cart">CarT</string>
    <string-array name="country_arrays">
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
    </string-array>
    <string-array name="occation">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Party</item>
        <item>Gettogether</item>
    </string-array>
    <string name="title_activity_nyms_list">NymsListActivity</string>
    <string name="title_activity_bux">BuxActivity</string>
    <string name="title_activity_pons">PonsActivity</string>
    <string name="title_activity_deals">DealsActivity</string>
    <string name="title_activity_offer_summary">OfferSummaryActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="contacts">Contacts</string>
    <string name="select_country">Select Country</string>
    <string name="grp_name">Group Subject</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Font size</string>
    <string name="pref_sync_frequency_summary">Font size for conversation screen.</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="add_grp_members">Add group members</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="no_data">No Data</string>
    <string name="buxs_recived">BuxS received</string>
    <string name="buxs_donated">BuxS donated</string>
    <string name="password_already_send_on_your_mobile_number">Password already send to your mobile number</string>
    <string name="err">Error</string>
    <string name="invalid_user">Invalid User</string>
    <string name="no_internet_connection">No internet connection available.</string>
    <string name="add_to_contact">Add to contact</string>
    <string name="initializing">Initializing....</string>
    <string name="please_wait_a_moment">Please wait a  moment...</string>
    <string name="deleting_your_account">DELETING YOUR ACCOUNT WILL:</string>
    <string name="delete_your_ccount_from_niftychat">Delete your account from KaChing.me</string>
    <string name="erase_your_message_hostory">Erase your message history</string>
    <string name="delete_you_from_group">Delete you from all of your KaChing.me groups</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="niftychat">KaChing.me</string>
    <string name="enjoy_free_message_for_life">Enjoy free messaging for life</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="agree_n_continue">Agree &amp; Continue</string>
    <string name="send_my_current_location">Send my current location</string>
    <string name="members">Members</string>
    <string name="delete_n_exit_group">Delete &amp; exit group</string>
    <string name="type_contact_name">Type contact name</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="fax">Fax</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Linkedin">Linkedin</string>
    <string name="message_backup_found">Message Backup Found! </string>
    <string name="would_you_like_to_restore_backup">Would you like to restore your messages history from backup?</string>
    <string name="no_thanks">No thanks</string>
    <string name="restore">Restore</string>
    <string name="please_wait_while_restoring_your_messages">Please wail while restoring your messages</string>
    <string name="send">Send</string>
    <string name="niftychat_will_send_onetime_sms">KaChing.me will give missed call to verify your phone number.</string>
    <string name="your_mobile_no">Your Mobile Number</string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="next">Next</string>
    <string name="set_your_profile_pic">Set your profile picture</string>
    <string name="please_provide_group_icon">*Please provide group icon</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="are_you_sure_you_want_to_make_admin">Are you sure? you want to make %1$s as admin ?</string>
    <string name="email_option">Email [Optional]</string>
    <string name="Register">Register</string>
    <string name="best_for_professional">Best for professional networking</string>
    <string name="free_chat">Use your smartphone as Scrolling Billboard - DazZ</string>
    <string name="nym_chat">Create your own acronyms NynM and text message</string>
    <string name="krok_chat">Sing Along Karaoke - KroK and Text message to your friend</string>
    <string name="increasing_revenue">Increase revenue through marketing</string>
    <string name="unlimited_document">Unlimited document sharing</string>
    <string name="branding_n_marketing">Branding &amp; Marketing</string>
    <string name="offers_n_coupons">Offers and coupons</string>
    <string name="visiting_card_templates">10 Visiting card templates</string>
    <string name="broucher_templates">5 brouchur templates</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="multiple_platfor">Get a Freebie for Downloading</string>
    <string name="avilable_for_iphone">Available for iphone,ipad and Android</string>
    <string name="document_share">Get Rewarded for Just Texting</string>
    <string name="share_unlimited_file">Share unlimited files in more than 100 different formats</string>
    <string name="share_media_file_ease">Share media files with ease</string>
    <string name="one_to_one_chat">One to One chat</string>
    <string name="group_chat">Group chat</string>
    <string name="secret_chat">Secret chat</string>
    <string name="chat_history_slider">Chat history</string>
    <string name="professional_networking">Professional networking</string>
    <string name="showcase_business">Showcase your business profile</string>
    <string name="enterpreneur_can_showcase">Entrepreneur can showcase products or services</string>
    <string name="enhance_your_branding">Enhance your branding</string>
    <string name="marketing_with_ease">Marketing with ease</string>
    <string name="your_current_status">Your current status</string>
    <string name="selecy_your_current_status">Select your new status:</string>
    <string name="user_profile">User Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="sync_contacts">Sync contacts</string>
    <string name="profile">Profile</string>
    <string name="profile_pic">KachingMe Profile Picture</string>
    <string name="profile_name">Profile Name</string>
    <string name="personal_info">Personal Info</string>
    <string name="create_brochure">Create Brochure</string>
    <string name="create_visiting_card">Visiting Card</string>
    <string name="new_group">New Group</string>
    <string name="settings">Settings</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="select_contacts">Select contacts</string>
    <string name="select_group_admin">Select group admin</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm">Delete Account Confirm</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="auto_download">Auto Download</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="share_locations">Share Location</string>
    <string name="send_contacts">Send Contacts</string>
    <string name="contact">Contact</string>
    <string name="select_file">Select File</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="restore_backup_cloud">Cloud Restore Backup</string>
    <string name="verification">Activation</string>
    <string name="delete_all_conversastion">Delete all conversations</string>
    <string name="profile_picture">Profile Picture Changed</string>
    <string name="unblock">Unblock</string>
    <string name="are_sure_delete_coversastion">Are you sure you want to delete all conversations and their messages?</string>
    <string name="last_backup">Last backup: </string>
    <string name="Ok">Ok</string>
    <string name="select_admin">Select admin</string>
    <string name="add_admin">Make group admin</string>
    <string name="Alert">Alert</string>
    <string name="you_must_assign_new_admin">You must assign new admin to groups you own.</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="contact_info">Contact info</string>
    <string name="it_seems_like_no_gallery">It seems like you do not have image gallery application to select the image!</string>
    <string name="loading">Loading...</string>
    <string name="email_already_exist">Email already exist.</string>
    <string name="varification_note">*If you dont receive any call within 2 mins, click "Call Again" above</string>
    <string name="otp_varification_note">KaChing.me will give missed call to verify your phone number.</string>
    <string name="otp_varification_hint">Enter First Five Digit From Missed Call</string>
</resources>