<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restore_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/message_backup_found" />

            <TextView
                android:id="@+id/restore_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/would_you_like_to_restore_backup" />
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

    <LinearLayout
        android:id="@+id/restore_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FE0000"
            android:text="@string/no_thanks"
            android:textColor="@color/white_to_black_selector" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FE0000"
            android:text="@string/restore"
            android:textColor="@color/white_to_black_selector" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restore_backup_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/restore_processText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_wait_while_restoring_your_messages"
            android:textColor="@color/white_to_black_selector" />

        <ProgressBar
            android:id="@+id/restore_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>