<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sigin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niftychat_will_send_onetime_sms"
        android:textColor="@color/app_color_blue" />


    <AutoCompleteTextView
        android:id="@+id/sigin_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_style_gray"
        android:digits="abcdefghijklmnopqrstuvwxyz
                				ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="Enter Country Name"
        android:inputType="text"
        android:textColor="@color/black" />


    <LinearLayout
        android:id="@+id/signin_mobileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sigin_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_style_gray"
            android:ems="3"
            android:focusable="false"
            android:inputType="number"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sigin_seperator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-"
            android:textColor="#000" />

        <EditText
            android:id="@+id/signin_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_style_gray"
            android:digits="0123456789"
            android:ems="5"
            android:hint="@string/your_mobile_no"
            android:inputType="phone"
            android:maxLength="15"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />
    </LinearLayout>

    <EditText
        android:id="@+id/sigin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_style_gray"
        android:ems="15"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:visibility="gone" />


    <TextView
        android:id="@+id/sigin_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/red_to_gray_selector"
        android:visibility="gone" />

    <TextView
        android:id="@+id/signin_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector_white_to_gray"
        android:text="@string/next"
        android:textColor="@color/red" />

</LinearLayout>
